# Discounted-Udemy-Course-Enroller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DUCE-CLI-windows.spec  DUCE-GUI-windows.spec  LICENSE  README.md  base.py  cli.py  default-duce-cli-settings.json  default-duce-gui-settings.json  gui.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-form.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  del-old.yml
duce/: __init__.py
duce/core/: client.py  config.py  cookies.py  db.py  exceptions.py  images.py  models.py
duce/scrapers/: __init__.py  base_scraper.py  cj.py  cs.py  cv.py  cxyz.py  du.py  en.py  fwc.py  idc.py  rd.py  tb.py  uf.py
duce/utils/: html.py  network.py  url.py
scratch/: test_freewebcart_course.py  test_freewebcart_courses_page.py  test_freewebcart_html.py  test_freewebcart_pagination.py  test_freewebcart_pagination_links.py  test_freewebcart_scraper.py
tests/: __init__.py  test_core.py  test_scrapers.py
